--- a/frontend/src/component/Projects/project.css
+++ b/frontend/src/component/Projects/project.css
@@ -17,19 +17,27 @@
 }
 
 .projectcaption {
-  margin-bottom: 3rem;
+  margin: 3rem 3rem;
   font-size: 1rem;
   font-weight: 300;
 }
+
+.projectImgs{
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .prj1 {
   display: flex;
   flex-direction: row;
   margin-bottom: 4rem;
+  /* flex-wrap: wrap; */
 }
 
 .prj2 {
   display: flex;
   flex-direction: row-reverse;
+  /* flex-wrap: wrap; */
   /* margin-bottom: 4rem; */
 }
 
@@ -126,3 +134,106 @@
   cursor: pointer;
   background: gray;
 }
+
+@media only screen and (max-width: 768px){
+  .projectdesc p {
+    font-size: 0.7rem;
+    /* font-weight: 200;
+    padding: 0 2.5rem; */
+  }
+  
+  .projectdesc h5 {
+    font-size: 1rem;
+  }
+
+  .projectimg {
+    height: auto;
+    width: 340px;
+    padding: 0.5rem;
+    background: rgb(40, 40, 40);
+    margin: 0 1rem;
+  }
+}
+@media only screen and (max-width: 600px){
+  .projectdesc p {
+    font-size: 0.7rem;
+    /* font-weight: 200;
+    padding: 0 2.5rem; */
+  }
+  
+  .projectdesc h5 {
+    font-size: 1rem;
+  }
+
+  .projectimg {
+    height: auto;
+    width: 240px;
+    padding: 0.5rem;
+    background: rgb(40, 40, 40);
+    margin: 0 1rem;
+  }
+}
+
+@media only screen and (max-width: 500px){
+  .projectdesc p {
+    font-size: 0.8rem;
+    /* font-weight: 200;
+    padding: 0 2.5rem; */
+  }
+  
+  .projectdesc h5 {
+    font-size: 1rem;
+  }
+
+  .projectimg {
+    height: auto;
+    width: 300px;
+    padding: 0.5rem;
+    background: rgb(40, 40, 40);
+    margin: 0 1rem;
+  }
+
+  .prj1 {
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  
+  .prj2 {
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+}
+
+@media only screen and (max-width: 375px){
+  .projectdesc p {
+    font-size: 0.8rem;
+    /* font-weight: 200;
+    padding: 0 2.5rem; */
+  }
+  
+  .projectdesc h5 {
+    font-size: 1rem;
+  }
+
+  .projectimg {
+    /* height: auto; */
+    width: 250px;
+
+  }
+
+  .prj1 {
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  
+  .prj2 {
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+}
+
+
