--- a/frontend/src/component/NavBar/Navbar.css
+++ b/frontend/src/component/NavBar/Navbar.css
@@ -71,7 +71,9 @@
     display: none;
     object-fit: cover;
     height: 1.8rem;
+    border-bottom: none;
 }
+
 .navMenu{
     position: absolute;
     top: 4rem;
@@ -81,8 +83,8 @@
     flex-direction: column;
     padding: 0.5rem;
     height: fit-content;
-    min-width: 15rem;
-    background: rgb(40, 40, 40);
+    min-width: 12rem;
+    background: rgb(55, 55, 55);
     border-radius: 1rem;
 }
 
@@ -103,6 +105,10 @@
 @media screen and (max-width: 768px) {
     .MobMenu{
         display: flex;
+    }
+
+    .active {
+        border-bottom: none;
     }
 
     .deskMenuListItem{
