--- a/frontend/src/component/Intro/intro.css
+++ b/frontend/src/component/Intro/intro.css
@@ -38,8 +38,7 @@
 .introContent {
   height: 100vh;
   width: 80wh;
-  padding: 2rem;
-  /* margin-bottom: 4rem; */
+  padding: 7rem 2rem;
   font-size: 3rem;
   font-weight: 700;
   display: flex;
