--- a/frontend/src/component/Projects/project.css
+++ b/frontend/src/component/Projects/project.css
@@ -12,12 +12,12 @@
 }
 
 .projecttitle {
-  margin: 0.8rem 0;
+  /* margin: 0.8rem 0; */
   font-size: 3rem;
 }
 
 .projectcaption {
-  margin: 3rem 3rem;
+  margin: 2rem 3rem;
   font-size: 1rem;
   font-weight: 300;
 }
@@ -29,14 +29,20 @@
 
 .prj1 {
   display: flex;
-  flex-direction: row;
+  flex-direction: row-reverse;
   margin-bottom: 4rem;
   /* flex-wrap: wrap; */
 }
 
 .prj2 {
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
+  /* flex-wrap: wrap; */
+  margin-bottom: 4rem;
+}
+.prj3 {
+  display: flex;
+  flex-direction: row;
   /* flex-wrap: wrap; */
   /* margin-bottom: 4rem; */
 }
@@ -127,7 +133,7 @@
   background: white;
   border-radius: 2rem;
   font-size: 1rem;
-  margin: 3rem 0;
+  margin: 2rem 0;
 }
 
 .projectBtn:hover {
@@ -206,6 +212,12 @@
     justify-content: center;
     flex-wrap: wrap;
   }
+  
+  .prj3 {
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
 }
 
 @media only screen and (max-width: 375px){
@@ -232,6 +244,12 @@
   }
   
   .prj2 {
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .prj3 {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
