--- a/frontend/src/component/Intro/intro.css
+++ b/frontend/src/component/Intro/intro.css
@@ -3,6 +3,7 @@
   width: 100vw;
   max-width: 80rem;
   margin: 0 auto;
+  margin-top: 1rem;
   /* margin-bottom: 7rem; */
   overflow: hidden;
   /* margin-bottom: 19rem; */
