--- a/frontend/src/component/Intro/intro.css
+++ b/frontend/src/component/Intro/intro.css
@@ -19,7 +19,7 @@
   top: 10rem;
   right: 7rem;
   object-fit: cover;
-  z-index: -1;
+  z-index: 2;
   /* width: 50%; */
   height: 60vh;
   /* margin: 1rem; */
@@ -105,7 +105,7 @@
     position: relative;
     width: 40vh;
     height: 40vh;
-    display: block;
+    /* display: block; */
     margin: auto;
     margin-top: 1rem;
     top: 2rem;
