--- a/frontend/src/component/contact/contact.css
+++ b/frontend/src/component/contact/contact.css
@@ -103,6 +103,24 @@
   margin: 0 0.75rem;
 }
 
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.3); /* Semi-transparent white background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; /* Ensure it's above other content */
+}
+
+.loading-indicator {
+  width: 200px; /* Set the desired width */
+  height: 200px; /* Set the desired height */
+}
+
 @media screen and (max-width: 768px) {
 
   .skillImg {
